# asmfmt

./: .gitignore  Cargo.toml  README.md  flow.fish
.github/workflows/: rust.yml
asmfmt-vsc/: README.md  package.json
asmfmt-vsc/src/: extension.ts
crates/fmt/: Cargo.toml  README.md
crates/fmt/src/: lib.rs
crates/fmt/testdata/: basic.asm  directives.asm  labels.asm  printf1.asm  printf2.asm  pseudo.asm
crates/fmt/testdata/output/: fmt__tests__align_comments_printf1.snap  fmt__tests__align_labels_printf2.snap  fmt__tests__align_pseudo_pseudo.snap  fmt__tests__basic.snap  fmt__tests__dedent_labels_labels.snap  fmt__tests__fix_case_printf1.snap  fmt__tests__fix_case_printf2.snap  fmt__tests__indent_dir_directives.snap
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer_state.rs  lib.rs  token_tree.rs
crates/lexer/testdata/: directives.asm  hello-crlf.asm  hello.asm  hm.asm  numbers.asm  printf1.asm
crates/lexer/testdata/output/: asm_lexer__tests__directives.snap  asm_lexer__tests__hello.snap  asm_lexer__tests__hello.snap.new  asm_lexer__tests__hm.snap  asm_lexer__tests__hm.snap.new  asm_lexer__tests__numbers.snap  asm_lexer__tests__printf1.snap  asm_lexer__tests__printf1.snap.new
src/: main.rs
