[package]
name = "fmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asm-lexer = { path = "../lexer/" }
serde = { version = "1.0.160", features = ["derive"], optional = true}

[dev-dependencies]
insta = "1.29.0"


[features]
serde = ["dep:serde", "asm-lexer/serde"]
