[package]
name = "asm-lexer"
version = "0.1.0"
edition = "2021"


[dependencies]
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
pretty_assertions = "1.3.0"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
