[package]
name = "asm-lexer"
version = "0.1.0"
edition = "2021"


[dependencies]
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"
serde = { version = "1.0.160", features = ["derive"], optional = true}

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml"] }
pretty_assertions = "1.3.0"


[features]
serde = ["dep:serde"]
